<resources>
    <string name="app_name"></string>
    <string name="btn_1_pagina_principala">My Profile</string>
    <string name="btn_2_pagina_principala">Covid-19 Statistics</string>
    <string name="btn_3_pagina_principala">Covid-19 Test Locations</string>
    <string name="btn_4_pagina_principala">Prevention Measures</string>
    <string name="romania_stats_covidstats_menu">Romania Statistics</string>
    <string name="global_stat_covidstats_menu">Global Statistics</string>
    <string name="romania_stats_ic_country">Country Report</string>
    <string name="romania_stat_ic_county">My County</string>
    <string name="total_no_of_cases">Total Cases:</string>
    <string name="new_no_of_cases">New Cases:</string>
    <string name="infection_rate">Infection Rate:</string>
    <string name="county_name">County:</string>
    <string name="romania">Romania</string>
    <string name="Bucharest">București</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="log_in_text">Log in</string>
    <string name="LoginTitle">Welcome to the login screen</string>
    <string name="username_hint">E-mail</string>
    <string name="healthy">Status: Healthy</string>
    <string name="hint_password">Password</string>
    <string name="wrong_credentials">Wrong username or password</string>
    <string name="logout">logout</string>
    <string name="show_list">Show List</string>
    <string name="new_friend">New friend</string>
    <string name="default_date">7.11.2020</string>
    <string name="country_name">Country:</string>
    <string name="casesperm">Cases / 1 Million:</string>
    <string name="new_user_button">New Account? Sign Up</string>
    <string name="auth_title">Create new Account</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="firstName_placeholder">First Name</string>
    <string name="lastName_placeholder">Last Name</string>
    <string name="newFriendText">Add A New Friend</string>
    <string name="fullName_placeholder">Full Name Of Friend</string>
    <string name="submit">Submit</string>
</resources>