<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:flexDirection="column"
        app:alignItems="center"
        app:justifyContent="space_evenly"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/my_profile_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:drawableTop="@drawable/ic_outline_account_circle_24"
            android:text="@string/btn_1_pagina_principala"
            android:textColor="@color/lightBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            style="?attr/borderlessButtonStyle"
            android:onClick="OpenLogin"/>

        <Button
            style="?attr/borderlessButtonStyle"
            android:id="@+id/stats_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:drawableTop="@drawable/ic_outline_poll_24"
            android:text="@string/btn_2_pagina_principala"
            android:textColor="@color/lightBlue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            style="?attr/borderlessButtonStyle"
            android:id="@+id/test_locations_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:drawableTop="@drawable/ic_outline_local_hospital_24"
            android:text="@string/btn_3_pagina_principala"
            android:textColor="@color/lightBlue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            style="?attr/borderlessButtonStyle"
            android:id="@+id/prevention_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:drawableTop="@drawable/ic_outline_masks_24"
            android:text="@string/btn_4_pagina_principala"
            android:textColor="@color/lightBlue"
            android:textSize="18sp"
            android:onClick="ShowPrev"
            android:textStyle="bold" />

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>