<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/static_county_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/county_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/county_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/static_county_name"
                app:layout_constraintTop_toBottomOf="@+id/static_county_name" />

            <TextView
                android:id="@+id/static_total_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/total_no_of_cases"
                app:layout_constraintStart_toStartOf="@+id/county_name"
                app:layout_constraintTop_toBottomOf="@+id/county_name" />

            <TextView
                android:id="@+id/static_new_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/new_no_of_cases"
                app:layout_constraintStart_toStartOf="@+id/number_infection_rate"
                app:layout_constraintTop_toBottomOf="@+id/number_infection_rate" />

            <TextView
                android:id="@+id/number_new_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/static_new_cases"
                app:layout_constraintTop_toBottomOf="@+id/static_new_cases" />

            <TextView
                android:id="@+id/number_infection_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/static_total_cases"
                app:layout_constraintTop_toBottomOf="@+id/static_total_cases" />

            <TextView
                android:id="@+id/static_infection_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/infection_rate"
                app:layout_constraintStart_toStartOf="@+id/number_new_cases"
                app:layout_constraintTop_toBottomOf="@+id/number_new_cases" />

            <TextView
                android:id="@+id/number_total_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/static_infection_rate"
                app:layout_constraintTop_toBottomOf="@+id/static_infection_rate" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>