<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/globalCardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="16dp">

            <TextView
                android:id="@+id/static_total_cases_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/total_no_of_cases"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/countryName"
                app:layout_constraintTop_toBottomOf="@+id/countryName" />

            <TextView
                android:id="@+id/static_new_cases_global"
                style="@style/StatusStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_no_of_cases"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/static_total_cases_global"
                app:layout_constraintTop_toBottomOf="@+id/number_total_cases_global" />

            <TextView
                android:id="@+id/number_new_cases_global"
                style="@style/StatusStyletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textColor="#787878"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/number_total_cases_global"
                app:layout_constraintTop_toBottomOf="@+id/static_new_cases_global" />

            <TextView
                android:id="@+id/number_total_cases_global"
                style="@style/StatusStyletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textColor="#787878"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/static_total_cases_global"
                app:layout_constraintTop_toBottomOf="@+id/static_total_cases_global" />

            <TextView
                android:id="@+id/static_casesperm_global"
                style="@style/StatusStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/casesperm"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/static_new_cases_global"
                app:layout_constraintTop_toBottomOf="@+id/number_new_cases_global" />

            <TextView
                android:id="@+id/number_casesperm_global"
                style="@style/StatusStyletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="TextView"
                android:textColor="#787878"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/number_new_cases_global"
                app:layout_constraintTop_toBottomOf="@+id/static_casesperm_global" />

            <TextView
                android:id="@+id/countryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="TextView"
                android:textColor="#787878"
                android:textSize="32sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/countryFlag"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="60dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.31"
                app:srcCompat="@drawable/united_states_of_america" />

            <TextView
                android:id="@+id/entryIndex"
                android:layout_width="60dp"
                android:layout_height="52dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="TextView"
                android:textColor="@color/grey"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>